# surl

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  compose.yaml  env.example  rustfmt.toml
.github/workflows/: ci.yaml
codex/TASKS/: 00_prepare_repository.yaml  01_scaffold.yaml  02_db_bootstrap.yaml  03_migrations_pg.yaml  04_migrations_sqlite.yaml  05_models_and_types.yaml  06_slug_policy_util.yaml  07_create_link_endpoint.yaml  08_redirect_hot_path.yaml  09_login_and_session.yaml  10_links_crud_ui.yaml  11_analytics_full.yaml  12_admin_settings.yaml  13_security_hardening.yaml  14_observability_ci.yaml  15_docker_and_compose.yaml  16_load_tests.yaml  17_docs_ops.yaml  18_polish_and_qol.yaml  CODEX_TODO.md
migrations/postgres/: 0001_init.sql
migrations/sqlite/: 0001_init.sql
src/: app.rs  config.rs  db.rs  main.rs  models.rs  slug_policy.rs
src/routes/: account.rs  admin.rs  mod.rs  public.rs  session.rs
