[package]
name = "surl"
version = "0.1.0"
edition = "2021"

[features]
default = ["postgres"]
postgres = ["sqlx/postgres", "sqlx/runtime-tokio-rustls"]
sqlite   = ["sqlx/sqlite",   "sqlx/runtime-tokio-rustls"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.14"
sqlx = { version = "0.7", default-features = false }
