[package]
name = "surl"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Rick Pfahl <pfahlr@users.noreply.github.com>"]
description = "SURL — ultra-fast Rust short links with Postgres/SQLite features, cache-first redirects, admin regex policy, and privacy-aware analytics."

[features]
default = ["postgres"]
postgres = ["sqlx/postgres", "sqlx/runtime-tokio-rustls"]
sqlite   = ["sqlx/sqlite",   "sqlx/runtime-tokio-rustls"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.14"
regex = "1"
anyhow = "1"
thiserror = "1"

# SQLx with runtime toggled by features
sqlx = { version = "0.7", default-features = false, features = ["macros", "migrate"] }

# (Optional later) moka, argon2, etc. — add when needed by tasks

[dev-dependencies]
http-body-util = "0.1"
